--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/bangers": "^5.0.3",
+    "@fontsource/lobster-two": "^5.0.3",
+    "@fontsource/luckiest-guy": "^5.0.3",
     "aos": "^2.3.4",
     "framer-motion": "^10.12.16",
     "mongodb": "^5.6.0",
@@ -22,6 +25,7 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
