--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/bangers": "^5.0.3",
+    "@fontsource/kanit": "^5.0.3",
     "@fontsource/lobster-two": "^5.0.3",
     "@fontsource/luckiest-guy": "^5.0.3",
     "aos": "^2.3.4",
